# OpenCL-examples

./: 404.html  CLAUDE.md  CMakeLists.txt  README.md  add_numbers.c  index.html  mkdocs.yml  sitemap.xml
Hello_World/: CMakeLists.txt  Makefile  README.md  ReadMe.txt  hello.c
Hello_World/hello.xcodeproj/: project.pbxproj
N-BodySimulation/: GalaxyIcon.icns  LICENSE.txt  README.md
N-BodySimulation/OpenCL_NBody_Simulation.xcodeproj/: project.pbxproj
N-BodySimulation/Resources/Images/: star.raw
N-BodySimulation/Resources/en.lproj/: MainMenu.xib
N-BodySimulation/Sources/Kernels/: nbody_cpu.ocl  nbody_gpu.ocl
N-BodySimulation/Sources/Model/Foundation/Text/: CFText.h  (+1 more)
N-BodySimulation/Sources/Other/: OpenCL_NBody_Simulation-Info.plist  main.m
N-BodySimulation/Sources/Shaders/NBody/: nbody.fsh  nbody.gsh  nbody.vsh
N-BodySimulation/Sources/Shaders/Star/: star.fsh  star.vsh
N-BodySimulation/Sources/View/: OpenGLView.h  OpenGLView.mm
RayTraced_Quaternion_Julia-Set_Example/: CMakeLists.txt  Makefile  README.md  ReadMe.txt  qjulia.c
RayTraced_Quaternion_Julia-Set_Example/qjulia.xcodeproj/: project.pbxproj
RayTraced_Quaternion_Julia-Set_Example/qjulia.xcodeproj/project.xcworkspace/xcuserdata/nemmen.xcuserdatad/: UserInterfaceState.xcuserstate
RayTraced_Quaternion_Julia-Set_Example/qjulia.xcodeproj/xcuserdata/nemmen.xcuserdatad/xcschemes/: qjulia.xcscheme  xcschememanagement.plist
add_numbers/: CMakeLists.txt  Makefile  README.md  add_numbers.c  add_numbers.cl
architecture/: index.html
auger/: CMakeLists.txt  Makefile  README.md  clbuild.c  cr.cl  defs.h  exposure.c  exposure.clh  exposure.h  main.c
building/: index.html
cf4cl/: README.md  READMe.md  make.sh  mysum.c  mysum.cl
cmake/: FindclRNG.cmake  cl_compat.h
common/: CMakeLists.txt
docs/: architecture.md  building.md  index.md
docs/examples/: add-numbers.md  auger.md  cf4cl.md  hello-world.md  julia-set.md  mandelbrot.md  n-body.md  rng.md  square-array.md  sum-array.md  waste.md
examples/add-numbers/: index.html
examples/auger/: index.html
examples/cf4cl/: index.html
examples/hello-world/: index.html
examples/julia-set/: index.html
examples/mandelbrot/: index.html
examples/n-body/: index.html
examples/rng/: index.html
examples/square-array/: index.html
examples/sum-array/: index.html
examples/waste/: index.html
mandelbrot/: CMakeLists.txt  Makefile  README.md  mandelbrot.c  mandelbrot_serial.c
rng/: CMakeLists.txt  Makefile  README.md  device.c  kernel.cl
rng_host/: Makefile  main.c
search/: search_index.json
square_array/: CMakeLists.txt  Makefile  README.md  clbuild.c  defs.h  square.c  square.cl  square_serial.c
sum_array/: CMakeLists.txt  Makefile  README.md  vecAdd.c  vecAdd.cl
waste/: CMakeLists.txt  Makefile  clbuild.c  waste.c  waste.cl  waste_serial.c
(+90 files in other folders)
